created the basic layout for the login scene & signup scene. I also fixed a few things in our build.gradle in order for it to run properly (fixed the java version & such). Also added a little to the main.java file.